--- a/utils/color.css
+++ b/utils/color.css
@@ -42,6 +42,9 @@
   --BLACK-OPACITY-C: #1f1f1fcc;
   --BLACK-OPACITY-A: #1f1f1faa;
 
+  --GRAY: #b0b0b0;
+  --GRAY-DARK: #909090;
+
   --INPUT-WRONG: #ff0000;
   --INPUT-RIGHT: #008000;
   --PRICE-OFFER: #fa1a1a;
