bug-fix: nav id

--- a/pages/components/navigation/navigation.html
+++ b/pages/components/navigation/navigation.html
@@ -183,7 +183,7 @@
           </div>
 
           <div class="sui_cta_wrapper flex_row">
-            <button id="burger" class="btn_icon_fa">
+            <button id="nav-burger" class="btn_icon_fa">
               <i class="fas fa-bars"></i>
             </button>
             <div class="sui_cta collapsed_cta hide_cta flex_row">
