--- a/pages/components/navigation/navigation.css
+++ b/pages/components/navigation/navigation.css
@@ -62,7 +62,7 @@
   padding: 6px 15px 4px 15px;
   padding-left: 3.6rem;
 }
-.fa-bars {
+.sui_nav_mobile .fa-bars {
   font-size: 2.6rem;
   display: none;
 }
